--- a/Simple/Resources/Info.plist
+++ b/Simple/Resources/Info.plist
@@ -26,8 +26,8 @@
     <true/>
     <key>MinimumOSVersion</key>
     <string>14.0</string> <!-- Match Makefile TARGET -->
-    <key>NSPrincipalClass</key>
-    <string>HUDMainApplication</string> <!-- Use the custom class for HUD mode -->
+    <!-- <key>NSPrincipalClass</key>
+    <string>HUDMainApplication</string> --> <!-- Only use custom class for HUD mode, not launcher -->
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string> <!-- Requires LaunchScreen.storyboard or remove -->
     <key>UIRequiredDeviceCapabilities</key>
