Memory Utils class
Implement a memory read/write class, with capability of external read/write process memory, get process PID, get process base address.

Integrate the test for memory class into the tapMainButton function, it will ask for the desired process name to test upon touched.

--- a/entitlements.plist
+++ b/entitlements.plist
@@ -38,6 +38,12 @@
     <true/>
     <key>platform-application</key>
     <true/>
+    <key>task_for_pid-allow</key>
+	<true/>
+    <!-- <key>proc_info-allow</key> -->
+    <!-- <true/> -->
+    <!-- <key>get_task-allow</key> -->
+    <!-- <true/> -->
     <!-- <key>user-preference-read</key> -->
     <!-- <true/> -->
     <!-- <key>user-preference-write</key> -->
